# BattleGearBeavy

./: Cargo.toml  README.md
src/: components.rs  main.rs  systems.rs
src/api/: utility.rs
src/dashboard/: components.rs  mod.rs
src/dashboard/systems/: animations.rs  layout.rs  mod.rs
src/login/: components.rs  mod.rs  styles.rs
src/login/systems/: interactions.rs  layout.rs  mod.rs
src/register/: components.rs  mod.rs  styles.rs
src/register/systems/: interactions.rs  layout.rs
