[package]
name = "battle_gear_online"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.13.0"
smol_str = "0.2.1"
bevy_simple_text_input = "0.5.0"
bevy_round_ui = "0.2.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }

[profile.dev.package."*"]
opt-level = 3
